[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "PyTLE"
dependencies= [ 
	'numpy',
	'scipy',
    'sgp4'
]
version = "0.0.1"
authors = [
  { name="Kerry N. Wood", email="kerry.wood@asterism.ai" },
]
description = "Public TLE parser and outputter; used for TLE fitting and analysis"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/AsterismAI/PyTLE"
Issues = "https://github.com/AsterismAI/PyTLE/issues"
